# KSCB-RingAttractor

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  conanfile.py  config.sh
include/: CMakeLists.txt
include/ringlib/: CMakeLists.txt  RingAttractor.hpp
include/simulator/: RobotModel.hpp
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt  draglag.cpp
src/simulator/: CMakeLists.txt  RobotModel.cpp  main.cpp
src/visualiser/: requirements.txt  visualiser.py
tests/: CMakeLists.txt  utest-ringlib.cpp
